--- a/Salabytest/app/views/users/show.html.erb
+++ b/Salabytest/app/views/users/show.html.erb
@@ -1,24 +1,9 @@
 
 
-<!doctype html>
-<html class="no-js" lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Salaby | Min Side</title>
-  <link rel="stylesheet" href="/assets/shared/userpageStyle.css" />
-
-    
-
-</head>
-
-<body>
-
 <%= render 'shared/page_header' %>
 
-    
-<div id="wrapper">
+<div id="bgUser"><%= image_tag 'barn/skoleveien.jpg'%></div>
+<div id="UserWrapper">
     <div class="row">
         <div class="large-12 columns">
                 <div class="panel">
@@ -104,8 +89,3 @@
 
 <%= render 'shared/page_footer' %>
 
-
-
-</body>
-
-</html>
