--- a/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
+++ b/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
@@ -13,16 +13,20 @@ h1 {
     color: red;
 }
 
-body {
-    background: url("/assets/barn/skoleveien.jpg") no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    overflow:scroll;
-    overflow-x: hidden;
+#bgUser {
+    max-height: 100%;
+    min-width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
-#wrapper{
-    min-height: 100%;
+#bgUser img{
+  min-width: 100%;  
+}
+
+#UserWrapper{
+    min-height: 90%;
 }
 
 .placeholderImg {
