--- a/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
+++ b/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
@@ -1,7 +1,6 @@
 body {
     /*background-image: url("../img/naturfag_akvarium.jpg");*/
-    
-    background-color: #ccc;
+   /* background-color: #ccc;*/
 }
 
 
@@ -13,7 +12,7 @@ body {
     .breadcrumbs {
         background-color: transparent;
     }
-    #wrapper {
+    #wrapperVoksen {
         padding-top: 5em;
         min-height: 100%;
     }
@@ -82,12 +81,24 @@ body {
     }
     .articleImg {
         float: left;
+        margin-bottom: 1em;
+        margin-right: 1em;
+    }
+    
+    #articleOmrade .newsList {
+        float: left;
+    }
+    
+    #articleOmrade .paddingBig {
+        word-wrap: break-word;
+        
     }
     #articleOmrade article p {
         padding: 5px;
     }
     #articleOmrade article h3 {
         padding: 5px;
+        font-size: 14pt;
         border-bottom: solid thin #888;
     }
     /*---------ARTICLEOMRÅDE SLUTT---------*/
