--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -65,13 +65,13 @@
         <article>
           <h3>INNHOLD PÅ ENGELSK</h3>
           <img class="articleImg" src="/assets/voksen/nyheter/innholdPaaEngelsk.png" alt="Engelsk innhold" />
-          <ul>
-            <li>- Nye kapitler til fortellingen 'Dad missing!'</li>
-            <li>- Nivådelte oppgaver og tester til alle kapitler</li>
-            <li>- Oppdatert bibliotek</li>
-            <li>- Øvelser og tester til alle temaer i grammatikk</li>
-            <li>- Ny 'Task of the week' hver uke</li>
-          </ul>
+              <ul class="newsList"> 
+                <li>Nye kapitler til fortellingen 'Dad missing!</li>
+                <li>Nivådelte oppgaver og tester til alle kapitler</li>
+                <li>Oppdatert bibliotek</li>
+                <li>Øvelser og tester til alle temaer i grammatikk</li>
+                <li>Ny 'Task of the week' hver uke</li>
+              </ul>
         </article>
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
@@ -93,7 +93,7 @@
         <article>
           <h3>OVERSKRIFT 3</h3>
           <img class="articleImg" src="/assets/voksen/nyheter/budd.png" alt="Buddismen"/>
-          <p>På mandag drar vi til Trondheim for å delta på konferansen Visjon 2030.
+          <p class="paddingBig">På mandag drar vi til Trondheim for å delta på konferansen Visjon 2030.
 Konferansen omtales som en nasjonal innovasjonsdugnad. Tema er hvordan verden kan oppnå de universelle bærekraftsmålene som skal vedtas i FN til høsten, og det blir et særlig fokus på helse, utdanning og hvordan norske, innovative løsninger kan bidra.
 Vår ambisjon er å bidra til enda flere barn lærer enda bedre. Vi vil fortsette å spille på lag med lærere og elever.
 Under konferansen i Trondheim er vi representert på fem programposter, og vi gleder oss til mange gode diskusjoner med andre norske aktører som brenner for det samme.
@@ -107,7 +107,7 @@ Kanal S er den nye hovedportalen for 5. - 7. trinn.</p>
         <article>
           <h3>OVERSKRIFT 3</h3>
           <img class="articleImg" src="/assets/voksen/nyheter/budd.png" alt="Buddismen"/>
-          <p>Denne uken var ulike norske aktører invitert til å være med å diskutere hvordan innovative løsninger kan bidra til at verden når FN-målet om å utrydde all ekstrem fattigdom i verden innen 2030.
+          <p class="paddingBig">Denne uken var ulike norske aktører invitert til å være med å diskutere hvordan innovative løsninger kan bidra til at verden når FN-målet om å utrydde all ekstrem fattigdom i verden innen 2030.
 Vi var med, og snakket blant om hvordan Salaby brukes i Norge og utlandet. Mange spennende diskusjoner, og stas med så mye på fokus på viktigheten av utdanning som virkemiddel for å utrydde fattigdom!
 På konferansen møtte vi også utenriksminister Børge Brende, her tester han ferdigheter i Salaby.</p>
         </article>
