--- a/Salabytest/app/assets/stylesheets/index/intro.css
+++ b/Salabytest/app/assets/stylesheets/index/intro.css
@@ -75,7 +75,8 @@ input[type="text"],input[type="password"] {
     right: 20em;
     bottom: 0px;
     height: auto;
-    width: auto;
+    padding: 5px;
+    width: 400px;
     background-color: rgba(0,0,0,0.5);
     margin-bottom: 5em;
     font-family: slapstick;
@@ -95,7 +96,7 @@ input[type="text"],input[type="password"] {
     position: absolute;
     right: 0;
     bottom: 0;
-    width: 20em;
+    max-width: 10em;
     
 }
 /*
