--- a/Salabytest/app/views/users/_form_edit.html.erb
+++ b/Salabytest/app/views/users/_form_edit.html.erb
@@ -1,28 +1,30 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="large-12 medium-12 small-12 columns">
     <%= form_for(@user) do |f| %>
         <%= render 'shared/error_messages' %>
-
-        <p><label><strong>Fornavn</strong></label>
-         <%= f.label @user.first_name %></p>
-
-        <p><label><strong>Etternavn</strong></label>
-          <%= f.label @user.last_name %></p>
-
-        <p><label><strong>Brukernavn</strong></label>
-        <%= f.label @user.username %></p>
-
-        <label>Endre beskrivelse</label>
-        <%= f.text_area :description %>
-
-        <br>
-        <label>Nytt passord</label>
-        <%= f.password_field :password %>
-
-        <label>Gjenta passordet</label>
-        <%= f.password_field :password_confirmation %>
-
-        <%= f.submit "Large endringer", class: "button expand" %>
+        <label><strong>Navn: </strong></label>
+         <p><%= f.label @user.first_name %> <%= f.label @user.last_name %> | <%= f.label @user.username %> </p>
+    </div>
+    </div>
+    <div class="row">
+        <div class="large-12 medium-12 small-12 columns">
+            <label>Endre beskrivelse</label>
+            <%= f.text_area :description %>
+        </div>
+    </div>
+    <div class="row">
+        <div class="large-6 medium-12 small-12 columns">    
+            <label>Nytt passord</label>
+            <%= f.password_field :password %>
+        </div>
+        <div class="large-6 medium-12 small-12 columns">
+            <label>Gjenta passordet</label>
+                <%= f.password_field :password_confirmation %>
+        </div>
+    </div>
+      <div class="row">
+            <div class="large-6 medium-12 small-12 columns right ">
+                <%= f.submit "Lagre endringer", class: "button center" %>
+          </div>
+        </div>
     <% end %>
-  </div>
-</div>
