--- a/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
+++ b/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
@@ -13,8 +13,11 @@ h1 {
     color: red;
 }
 
+.right {
+    float: right;
+}
 #bgUser {
-    max-height: 100%;
+    min-height: 100%;
     min-width: 100%;
     position: absolute;
     left: 0;
