--- a/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
+++ b/Salabytest/app/assets/stylesheets/shared/userpageStyle.css
@@ -16,6 +16,11 @@ h1 {
 .right {
     float: right;
 }
+
+textArea {
+    resize: none;
+    height: 200px;    
+}
 #bgUser {
     min-height: 100%;
     min-width: 100%;
