--- a/Salabytest/app/assets/stylesheets/barn/forside_barn.css
+++ b/Salabytest/app/assets/stylesheets/barn/forside_barn.css
@@ -13,28 +13,6 @@
 }
 
 
-/*---------Headerområde!!---------*/
-#mainHeader {
-    width: 100%;
-    background-color: #f2f2f2;
-    border-bottom: solid thin #222;
-    margin-bottom: 20px;
-    /*position: fixed;*/
-    z-index: 10;
-}
-#siteLogo {
-    width: 200px;
-    /*margin-left: -50px;*/
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-.menuHeader {
-    width: 100%;
-    height: 25px;
-    top: 25px;
-    position: relative;
-}
-/*---------Headerområde SLUTT!!---------*/
 
 /*---------Hovedområde!!---------*/
 
@@ -68,7 +46,7 @@
 }
 /*for å tilpasse skoleveien menyen til hovedmenyen!!*/
 #skoleveienMenu .columns .menu-option{
-    margin-top: 0;
+    margin-top: -10px;
 }
 
     /*----------Hovedmeny SLUTT!!-----------*/
