--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -24,20 +24,19 @@
 <!--HEADER END-->
 
 <section class="test">
-  <div class="row" id="mainMenu">
-    <div class="large-3 medium-6 small-6 columns">
-      <img src="/assets/barn/RLE/logo_liten.png" draggable="false" alt="logo">
-    </div>
-    
-    <div class="large-3 medium-6 small-6 columns">
-      <a href="forside.html"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
-    </div>
-  </div>
   
   <div class="row">
     <div class="large-12 columns">
       <h1 class="fagh">RLE</h1>
     </div>
+  </div>
+
+    <div id="beadCrumbs">
+      <ul class="breadcrumbs">
+        <li><a href="/static_pages/barn/forside.html">Hjem</a></li>
+        <li class="unavailable"><a href="#">Kanal S</a></li>
+        <li class="current"><a href="/static_pages/barn/rle">RLE</a></li>
+    </ul>
   </div>
 
   <div class="test">
