--- a/Salabytest/app/views/shared/_page_header.html.erb
+++ b/Salabytest/app/views/shared/_page_header.html.erb
@@ -5,7 +5,7 @@
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
 
-        <%=link_to image_tag("logos/salaby_logo_enkel_rod.png", border: 0), root_path, {class: 'dock-item'}%>
+        <%=link_to image_tag("logos/salaby_logo_enkel_rod.png", border: 0), static_pages_barn_forside_path, {class: 'dock-item'}%>
 
     </ul>
 
