Endret rekkefølge på innlasting av CSS/JS

--- a/Salabytest/app/views/layouts/application.html.erb
+++ b/Salabytest/app/views/layouts/application.html.erb
@@ -12,8 +12,13 @@
     <%= favicon_link_tag 'favicon.ico' %>
   </head>
 
+  <!--</header><#%= render 'shared/page_header' %></header> -->
+
   <body>
     <%= yield %>
     <%= javascript_include_tag "application" %>
   </body>
+
+<!--<footer><#%= render 'shared/page_footer' %></footer> -->
+
 </html>
