--- a/Salabytest/app/assets/stylesheets/index/intro.css
+++ b/Salabytest/app/assets/stylesheets/index/intro.css
@@ -77,7 +77,8 @@ input[type="text"],input[type="password"] {
     height: auto;
     padding: 5px;
     width: 400px;
-    background-color: rgba(0,0,0,0.5);
+    background-color: purple;
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.2);
     margin-bottom: 5em;
 
     
