--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -24,20 +24,22 @@
 <!--HEADER END-->
 
 <section class="test">
-  
+
   <div class="row">
     <div class="large-12 columns">
       <h1 class="fagh">RLE</h1>
     </div>
   </div>
 
-    <div id="beadCrumbs">
-      <ul class="breadcrumbs">
+  <div class="row">
+    <ul class="breadcrumbs">
         <li><a href="/static_pages/barn/forside.html">Hjem</a></li>
         <li class="unavailable"><a href="#">Kanal S</a></li>
         <li class="current"><a href="/static_pages/barn/rle">RLE</a></li>
     </ul>
   </div>
+
+
 
   <div class="test">
 
@@ -61,7 +63,7 @@
           <img src="/assets/barn/RLE/kristendom.png" draggable="false" alt="Kristendombilde">
         </div>
       </div>
-      
+
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
           <a href="/static_pages/barn/rle/jodedom"><img src="/assets/barn/rle/jøde.png" draggable="false" alt="Jødedommenbilde"></a>
