--- a/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
@@ -23,17 +23,16 @@
       <h1 class="fagh">HINDUISME</h1>
     </div>
   </div>
-  
-    <div id="beadCrumbs">
-      <ul class="breadcrumbs">
+
+  <div class="row">
+    <ul class="breadcrumbs">
         <li><a href="/static_pages/barn/forside.html">Hjem</a></li>
         <li class="unavailable"><a href="#">Kanal S</a></li>
-        <li><a href="/static_pages/barn/rle.html">RLE</a></li>
-        <li class="current"><a href="/static_pages/barn/rle">Hinduisme</a></li>
+        <li class="current"><a href="/static_pages/barn/rle">RLE</a></li>
     </ul>
   </div>
 
-  
+
 
 
   <div class="row">
