--- a/Salabytest/app/assets/stylesheets/barn/forside_barn.css
+++ b/Salabytest/app/assets/stylesheets/barn/forside_barn.css
@@ -41,7 +41,8 @@
 }
 
 .menu{
-  margin-bottom: 10px;
+    margin-top: 80px;
+    margin-bottom: 10px;
 
 }
 /*for å tilpasse skoleveien menyen til hovedmenyen!!*/
@@ -159,8 +160,6 @@ img {
 
 /*---------Footer SLUTT!!-----------*/
 
-
-
 .top-bar {
     height: 6em;
     background-color: #f2f2f2;
@@ -225,7 +224,6 @@ box-shadow: 0 0px 0 1px grey, 0 7px 0 1px grey, 0 14px 0 1px grey;
     height: 4em;
     border-bottom: solid thin #dcdcdc;
 }
-
 
 }
 
