Utstedet dokumenter til layout.html.erb

--- a/Salabytest/app/views/static_pages/barn/rle/islam.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/islam.html.erb
@@ -1,23 +1,4 @@
-<!doctype html>
-<html class="no-js" lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Islam</title>
-  <link rel="stylesheet" href="/assets/barn/religion.css" />
-  <style>
-        body {
-          background: url("/assets/barn/islam/islambkg.jpg") no-repeat;
-          background-attachment: fixed;
-          background-position: center bottom;
-          background-size: cover;
-          background-color: rgba(0,163,204, 0.3);
-      }
-  </style>
-</head>
-
-<body>
+<div id="islam-background-container">
 
 <!--HEADER-->
 <%= render 'shared/page_header' %>
@@ -122,9 +103,4 @@
 <!-- FOOTER SLUTT -->
 
 
-<script>
-    $(document).foundation();
-</script>
-</body>
-
-</html>
+</div>
