--- a/Salabytest/app/assets/stylesheets/barn/islam.css
+++ b/Salabytest/app/assets/stylesheets/barn/islam.css
@@ -1,5 +1,13 @@
 /*---------Headerområde!!---------*/
 
+div .islam-background-container {
+    background: url("/assets/barn/islam/islambkg.jpg") no-repeat;
+    background-attachment: fixed;
+    background-position: center bottom;
+    background-size: cover;
+    background-color: rgba(0,163,204, 0.3);
+}
+
 #mainHeader {
     width: 100%;
     background-color: #f2f2f2;
