Fjernet resterender headers/footers

--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -1,23 +1,4 @@
-<!doctype html>
-<html class="no-js" lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forside Barn</title>
-  <link rel="stylesheet" href="/assets/barn/religion.css" />
-  <style>
-      body {
-          background: url("/assets/barn/rlebakgrunn.jpg") no-repeat;
-          background-attachment: fixed;
-          background-position: center bottom;
-          background-size: cover;
-          background-color: rgba(255,214,133, 0.3);
-      }
-  </style>
-</head>
-
-<body>
+s<div id="religion-background-wrapper">
 
 <!--HEADER-->
 <%= render 'shared/page_header' %>
@@ -104,16 +85,4 @@
   </div>
 </section>
 
-<!-- Footer -->
-
-<%= render 'shared/page_footer' %>
-
-<!-- FOOTER SLUTT -->
-
-
-<script>
-    $(document).foundation();
-</script>
-</body>
-
-</html>
+</div>
