navn endring og redundans
fjernet redundans på forside_barn.css og endret på id tilmain wrapper på
barnesiden.

--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -1,6 +1,6 @@
 <img draggable="false" src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
 
-<div id="wrapper">
+<div id="barnForsideWrapper">
 
   <!--meny-->
   <%= render 'meny' %>
