--- a/Salabytest/app/assets/stylesheets/barn/forside_barn.css
+++ b/Salabytest/app/assets/stylesheets/barn/forside_barn.css
@@ -84,7 +84,7 @@ img {
   min-height: 100%;
 }
 
-#wrapper{
+#barnForsideWrapper{
     min-height: 100%;
 }
 
@@ -109,56 +109,7 @@ img {
 
 
 
-/*---------Footer!!-----------*/
-#footer{
-    width: 100%;
-    background-color: #858585;
-    height: auto;
-    margin-top: 50px;
-    /*position: absolute;*/
-    bottom: 0;
-}
 
-#footerLogo img{
-    width: 160px;
-    margin: 15px;
-}
-
-#footerMid{
-    margin-top: 30px;
-}
-#footerMid li{
-    float: left;
-    margin: 5px;
-    list-style: none;
-}
-#footerMid li a{
-    color: rgb(250,250,250);
-}
-#footerMid li a:hover{
-    color: rgb(200,200,200);
-}
-
-#socialLinks img{
-    width: 40px;
-    margin: 5px;
-    margin-top: 20px;
-    cursor: pointer;
-    transition: all 0.15s ease-in-out 0s;
-    -webkit-transition: all 0.15s ease-in-out 0s;
-    -moz-transition: all 0.15s ease-in-out 0s;
-    -o-transition: all 0.15s ease-in-out 0s;
-
-}
-
-#socialLinks img:hover{
-    transform: scale(1.1,1.1);
-    -ms-transform: scale(1.1,1.1); /* IE 9 */
-    -webkit-transform: scale(1.1,1.1); /* Chrome, Safari, Opera */
-    opacity: 0.7;
-}
-
-/*---------Footer SLUTT!!-----------*/
 
 .top-bar {
     height: 6em;
