--- a/Salabytest/app/views/layouts/application.html.erb
+++ b/Salabytest/app/views/layouts/application.html.erb
@@ -11,7 +11,18 @@
     <%= favicon_link_tag 'favicon.ico' %>
   </head>
 
-  <header><%= render 'shared/page_header' unless @exclude_header %></header>
+  <header>
+
+    <% if @include_header_info %>
+
+        <%=render 'shared/page_header_info' %>
+
+    <% else %>
+
+    <%= render 'shared/page_header' unless @exclude_header %>
+
+    <% end %>
+  </header>
 
   <body>
     <%= yield %>
