--- a/Salabytest/app/assets/stylesheets/barn/forside_barn.css
+++ b/Salabytest/app/assets/stylesheets/barn/forside_barn.css
@@ -60,7 +60,7 @@ body {
     overflow-x: hidden;
 }
 
-img {
+#background-image {
     transition:-webkit-filter 0.2s ease-in-out;
     -o-transition:-webkit-filter 0.2s ease-in-out; 
     -moz-transition:-webkit-filter 0.2s ease-in-out; 
@@ -74,12 +74,10 @@ img {
     -webkit-filter: grayscale(1);
 }
 
-
 #background-image{
   position: fixed;
   top: 0;
   left: 0;
-
   min-width: 100em;
   min-height: 100%;
 }
@@ -106,10 +104,6 @@ img {
 }
 
 /*---------Hovedområde SLUTT!!---------*/
-
-
-
-
 
 .top-bar {
     height: 6em;
