--- a/Salabytest/app/views/static_pages/barn/_meny.html.erb
+++ b/Salabytest/app/views/static_pages/barn/_meny.html.erb
@@ -1,4 +1,4 @@
-<div class="row menu">
+<div class="row barn-meny">
     <div class="large-12 columns">
       <div class="row">
         <div class="large-3 medium-6 columns barnehageButton">
