La til topMarg klasse

--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -1,12 +1,9 @@
-s<div id="religion-background-wrapper">
+<div id="religion-background-wrapper">
 
-<!--HEADER-->
-<%= render 'shared/page_header' %>
-<!--HEADER END-->
 
 <section class="test">
 
-  <div class="row">
+  <div class="row topMarg">
     <div class="large-12 columns">
       <h1 class="fagh">RLE</h1>
     </div>
