--- a/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
@@ -1,12 +1,10 @@
 
 <!--MENU-->
-<%= render 'shared/page_header' %>
-
 
 
 <section id="test">
 
-<div class="row">
+<div class="row topMarg">
     <div class="large-12 columns">
       <h1 class="fagh">HINDUISME</h1>
     </div>
@@ -16,7 +14,9 @@
     <ul class="breadcrumbs">
         <li><a href="/static_pages/barn/forside.html">Hjem</a></li>
         <li class="unavailable"><a href="#">Kanal S</a></li>
-        <li class="current"><a href="/static_pages/barn/rle">RLE</a></li>
+        <li><a href="/static_pages/barn/rle">RLE</a></li>
+        <li class="current"><a href="/static_pages/barn/rle">Hinduisme</a></li>
+
     </ul>
   </div>
 
@@ -64,7 +64,3 @@
 </section>
 <!-- Footer -->
 
-
-<%= render 'shared/page_footer' %>
-
-<!-- FOOTER SLUTT -->
