--- a/Salabytest/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/Salabytest/app/assets/stylesheets/foundation_and_overrides.scss
@@ -31,3 +31,9 @@ $include-html-global-classes: $include-html-classes;
   text-transform: none;
 }
 
+.breadcrumbs {
+  background-color: rgb(244, 244, 244) !important;
+   margin-left:15px;
+    margin-right: 15px;
+}
+
