--- a/Salabytest/app/views/shared/_page_header_info.html.erb
+++ b/Salabytest/app/views/shared/_page_header_info.html.erb
@@ -1,5 +1,3 @@
-  <link rel="stylesheet" href="/assets/shared/header.css" />
-
 <div class="fixed">
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
@@ -14,7 +12,7 @@
     </ul>
     <section class="top-bar-section">
       <!-- Right Nav Section -->
-      <ul class="right">
+      <ul class="right-header-section">
         <li><%=link_to "Hjem", static_pages_info_forside_path %>
         </li>
         <li><%=link_to "Bestillinger", static_pages_info_bestilling_path %>
