--- a/Salabytest/app/assets/stylesheets/barn/religion.css
+++ b/Salabytest/app/assets/stylesheets/barn/religion.css
@@ -96,8 +96,9 @@
 /*----------Hovedmeny SLUTT!!-----------*/
 
 div #religion-background-wrapper {
-    background: url("barn/rlebakgrunn.jpg") no-repeat fixed white;
+    background: url("barn/rlebakgrunn.jpg") no-repeat fixed;
     background-attachment: fixed;
+    background-color: red;
     background-position: center bottom;
     background-size: cover;
 }
