--- a/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
+++ b/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
@@ -3,6 +3,9 @@ body {
    /* background-color: #ccc;*/
 }
 
+#bgVoksen {
+    background-color: white;
+}
 
 @media only screen and (min-width: 64.063em) {
     /***********************************CONSTRUCTORS**************************************/
