--- a/Salabytest/app/views/static_pages/info/forside.html.erb
+++ b/Salabytest/app/views/static_pages/info/forside.html.erb
@@ -1,4 +1,5 @@
-<div id="wrapper">
+<div id="bgVoksen">
+<div id="wrapperVoksen">
   <!--SLIDER-->
   <div class="row">
     <div class="large-12 columns">
@@ -96,4 +97,4 @@ På konferansen møtte vi også utenriksminister Børge Brende, her tester han f
     </div>
   </div>
 </div>
-
+    </div>
