--- a/Salabytest/app/views/static_pages/info/informasjon.html.erb
+++ b/Salabytest/app/views/static_pages/info/informasjon.html.erb
@@ -1,5 +1,5 @@
 
-<div id="wrapper">
+<div id="wrapperVoksen">
   <!--SLIDER-->
   <div class="row">
     <div class="large-12 columns">
@@ -41,7 +41,28 @@
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL-->
       <div class="large-10 small-12 columns">
-        <article>
+          
+          <div id="accordion">
+  <h3>Section 1</h3>
+  <div>
+    <p>
+    Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+    ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+    amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+    odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+    </p>
+  </div>
+  <h3>Section 2</h3>
+  <div>
+    <p>
+    Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+    purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+    velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+    suscipit faucibus urna.
+    </p>
+  </div>
+          
+<!--        <article>
           <h3>INFORMASJON OM INFORMASJON SIDEN</h3>
           <p>Salaby er et digitalt læremiddel i alle fag for 1.-7. trinn og for alle aldergrupper i barnehagen.
 
@@ -49,7 +70,7 @@ Salaby inneholder mer enn 4000 læringselementer fordelt på de ulike fagene. Ra
 
 Salaby har fire hovedportaler for 1. - 4. trinn
 </p>
-        </article>
+        </article>-->
       </div>
       <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
 
