Fikset meny størrelsene

--- a/Salabytest/app/views/static_pages/barn/_barnehageFag.html.erb
+++ b/Salabytest/app/views/static_pages/barn/_barnehageFag.html.erb
@@ -6,29 +6,30 @@
   </div>
   <!-- mobil meny SLUTT!-->
   <div class="row barnehage">
-    <div class="large-4 small-6 columns">
+    <div class="large-3 small-6 columns">
       <div class="align-center">
         <img draggable="false" src="/assets/barn/barnehage/biblioteket.png" alt="bibliotek fag">
       </div>
     </div>
-    <div class="large-4 small-6 columns">
+    <div class="large-3 small-6 columns">
       <div class="align-center">
         <img draggable="false" src="/assets/barn/barnehage/billehagen.png" alt="billehagen fag">
       </div>
     </div>
-    <div class="large-4 small-6 columns">
+    <div class="large-3 small-6 columns">
       <div class="align-center">
         <img draggable="false" src="/assets/barn/barnehage/musikkfilm.png" alt="mysikkfilm fag">
       </div>
     </div>
-    <div class="large-4 small-6 columns">
+    <div class="large-3 small-6 columns">
       <div class="align-center">
         <img draggable="false" src="/assets/barn/barnehage/TilDeVoksene.png" alt="til de voksene fag">
       </div>
     </div>
-    <div class="large-4 small-6 columns">
+    <div class="large-3 small-6 columns">
       <div class="align-center">
         <img draggable="false" src="/assets/barn/barnehage/trampoline.png" alt="trampoline fag">
       </div>
     </div>
+    <div class="large-3"></div>
   </div>
