--- a/Salabytest/app/views/static_pages/barn/_mFLFag.html.erb
+++ b/Salabytest/app/views/static_pages/barn/_mFLFag.html.erb
@@ -6,19 +6,20 @@
   </div>
   <!-- mobil meny SLUTT!-->
   <div class="row MFL">
-    <div class="large-4 small-6 columns">
+    <div class="large-3 small-6 columns">
       <div class="align-center">
         <img draggable="false" src="/assets/barn/mfl/mflbarnehage.png" alt="barnehage fag">
       </div>
     </div>
-    <div class="large-4 small-6 columns">
+    <div class="large-3 small-6 columns">
       <div class="align-center">
         <img draggable="false" src="/assets/barn/mfl/mflmatematikk.png" alt="matematikk fag">
       </div>
     </div>
-    <div class="large-4 small-6 columns">
+    <div class="large-3 small-6 columns">
       <div class="align-center">
         <img draggable="false" src="/assets/barn/mfl/mflnaturfag.png" alt="naturfag">
       </div>
     </div>
+    <div class="large-3"></div>
   </div>
