La til topmarg-element i Applikasjon.html.erb

--- a/Salabytest/app/assets/stylesheets/application.css
+++ b/Salabytest/app/assets/stylesheets/application.css
@@ -9,3 +9,10 @@ img{
 	-moz-user-drag: none;
 	-o-user-drag: none;
 }
+
+/* Overflow control */
+/* body {
+    overflow:scroll;
+    overflow-x: hidden;
+}
+*/
