Fjernet topMarg på rle

--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -3,7 +3,7 @@
 
 <section class="test">
 
-  <div class="row topMarg">
+  <div class="row">
     <div class="large-12 columns">
       <h1 class="fagh">RLE</h1>
     </div>
