--- a/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
@@ -4,7 +4,7 @@
 
 <section id="test">
 
-<div class="row topMarg">
+<div class="row">
     <div class="large-12 columns">
       <h1 class="fagh">HINDUISME</h1>
     </div>
