lagt til margin i toppen på mobilmenyen

--- a/Salabytest/app/assets/stylesheets/barn/mobile.css
+++ b/Salabytest/app/assets/stylesheets/barn/mobile.css
@@ -13,6 +13,10 @@
     	display: none;
     }*/
 
+    #barnehageButtonMobil{
+        margin-top: 50px;
+    }
+
     .menu-option img{
     	max-width: 200px;
     }
