--- a/Salabytest/app/views/layouts/application.html.erb
+++ b/Salabytest/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    "application", debug: :false %>
     <%= javascript_include_tag "vendor/modernizr", debug: :false %>
+    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js","jquery-rails.js"%>
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
   </head>
