--- a/Salabytest/app/views/static_pages/info/bestilling.html.erb
+++ b/Salabytest/app/views/static_pages/info/bestilling.html.erb
@@ -5,22 +5,11 @@
   <!--SLIDER-->
   <div class="row">
     <div class="large-12 columns">
-<aside id="promoBanner">
-        <div class="large-8 small-12 columns">
-          <img src="/assets/voksen/nyheter/historienOmEuropa.png" alt="Bilde av historien om europa">
+      <div class="row">
+        <div class="large-12 columns">
+            <%= render 'static_pages/info/page_information_banner.html.erb' %>
         </div>
-        <div class="large-4 small-12 columns">
-          <div id="promobannerTextBox">
-            <h3>HISTORIEN OM EUROPA</h3>
-            <p>NYHET: Helt ferske temasider om
-              romertiden, middelalderen,
-              renessansen og opplysningstiden
-              er nå tilgjengelig under
-              «Historien om Europa» for 5.-7. trinn.</p>
-          </div>
-        </div>
-
-      </aside>
+      </div>
     </div>
   </div>
   <!--OMRÅDE FOR ARTIKLER-->
