--- a/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
+++ b/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
@@ -31,7 +31,18 @@ body {
         z-index: 10;
     }
     /*HEADER SLUTT*/
+    /*ACCORDION STYLE*/
+    /*****************************************************************************************/
+    #accordion h3{
+        margin-bottom: 0;
+
+        }
     
+
+    
+    
+    /*END ACCORDION STYLE*/
+    /*****************************************************************************************/
     #siteLogo {
         width: 200px;
         /*margin-left: -50px;*/
