--- a/Salabytest/app/assets/stylesheets/barn/forside_barn.css
+++ b/Salabytest/app/assets/stylesheets/barn/forside_barn.css
@@ -51,13 +51,14 @@
     /*----------Hovedmeny SLUTT!!-----------*/
 
 #background-image {
-    transition:-webkit-filter 0.2s ease-in-out;
-    -o-transition:-webkit-filter 0.2s ease-in-out; 
-    -moz-transition:-webkit-filter 0.2s ease-in-out; 
-    -webkit-transition:-webkit-filter 0.2s ease-in-out;        
+    transition: filter 0.2s ease-in-out;
+    -o-transition: -o-filter 0.2s ease-in-out; 
+    -moz-transition: -moz-filter 0.2s ease-in-out; 
+    -webkit-transition: -webkit-filter 0.2s ease-in-out;        
 }
 
 .grey{
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
     filter: grayscale(1);
     -o-filter: grayscale(1);
     -moz-filter: grayscale(1);
