--- a/Salabytest/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/Salabytest/app/assets/stylesheets/foundation_and_overrides.scss
@@ -9,8 +9,9 @@
 
 // We use this to control whether or not CSS classes come through in the gem files.
 $include-html-classes: true;
-// $include-print-styles: true;
-$include-html-global-classes: $include-html-classes;
+$include-print-styles: true;
+$include-html-global-classes: true;
+$include-html-classes: true;
 
 @import 'foundation';
 
