--- a/Salabytest/app/views/shared/_page_header.html.erb
+++ b/Salabytest/app/views/shared/_page_header.html.erb
@@ -15,14 +15,15 @@
         <!--SCRIPT FOR Å SJEKKE OM BRUKER ER LOGGET INN-->
         <% if logged_in? %>
           <li>
-              <a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">
-                  <%=current_user.username %> <b class="caret"></b></a>
-                <ul id="hover1" class="f-dropdown" data-dropdown-content>
-                    <li><%=link_to "Min Side", user_path(current_user) %></li>
-                    <li class="divider"></li>
-                    <li><%= link_to "Logg ut", logout_path %></li>
+
+            <a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000"><%= current_user.username %></a>
+
+            <ul id="hover1" class="f-dropdown" data-dropdown-content>
+              <li><%= link_to "Min side", user_path(current_user) %></li>
+              <li><%= link_to "Logg ut", logout_path %></li>
             </ul>
-          </li>
+
+         </li>
         <% else %>
             <li><%= link_to "Logg inn", login_path %></li>
         <% end %>
