Fikset visningen av header. DETALJER - Margin legges bare til når header renderes - Header tagger kommer ikke med hvis header ikke renderes

--- a/Salabytest/app/views/shared/_page_header.html.erb
+++ b/Salabytest/app/views/shared/_page_header.html.erb
@@ -1,3 +1,5 @@
+<header>
+
 <!--MENU-->
 <div class="fixed">
   <nav class="top-bar" data-topbar role="navigation">
@@ -33,3 +35,4 @@
     </section>
   </nav>
 </div>
+</header>
