--- a/Salabytest/app/views/shared/_page_header_info.html.erb
+++ b/Salabytest/app/views/shared/_page_header_info.html.erb
@@ -1,3 +1,4 @@
+<header>
 <div class="fixed">
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
@@ -43,3 +44,4 @@
     </section>
   </nav>
 </div>
+</header>
