--- a/Salabytest/app/views/users/show.html.erb
+++ b/Salabytest/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="large-12 columns">
 
-          <p id="notice"><%= flash[:notice] %></p>
+          <div class="flash-message-box"><strong class="flash-message-text"><%= flash[:alert] %></strong></div>
 
                 <div class="panel">
                 <div id="userInfo">
