--- a/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
+++ b/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
@@ -33,10 +33,15 @@ body {
     /*HEADER SLUTT*/
     /*ACCORDION STYLE*/
     /*****************************************************************************************/
-    #accordion h3{
-        margin-bottom: 0;
 
-        }
+    #accordion {
+        height: 700px;
+        margin-bottom: 0px;
+    }
+    
+    #accordion h3 {
+        height: 50px;
+    }
     
 
     
