--- a/Salabytest/app/views/shared/_page_information_accordion.html.erb
+++ b/Salabytest/app/views/shared/_page_information_accordion.html.erb
@@ -1,23 +1,32 @@
- <h3>OM SALABY</h3>
-                <div>
-          <p>Salaby er et digitalt læremiddel i alle fag for 1.-7. trinn og for alle aldergrupper i barnehagen.
+<div id="accordion">
 
-Salaby inneholder mer enn 4000 læringselementer fordelt på de ulike fagene. Rammen rundt innholdet er byen Salaby og karakterene som bor der. Alt innhold er utviklet av norske pedagoger og fagfolk. Salaby er lisensbasert.
+    <h3>OM SALABY</h3>
+    <div id="omsalaby"> 
+            <div>
+              <p>Salaby er et digitalt læremiddel i alle fag for 1.-7. trinn og for alle aldergrupper i barnehagen.
 
-Salaby har fire hovedportaler for 1. - 4. trinn:
-- Sirkus (Skolestart)
-- Skoleveien (1. - 2. trinn)
-- Byparken (3. - 4. trinn)
-- Biblioteket (1. - 4. trinn)</p>
-                </div>
+    Salaby inneholder mer enn 4000 læringselementer fordelt på de ulike fagene. Rammen rundt innholdet er byen Salaby og karakterene som bor der. Alt innhold er utviklet av norske pedagoger og fagfolk. Salaby er lisensbasert.
+
+    Salaby har fire hovedportaler for 1. - 4. trinn:
+    - Sirkus (Skolestart)
+    - Skoleveien (1. - 2. trinn)
+    - Byparken (3. - 4. trinn)
+    - Biblioteket (1. - 4. trinn)</p>
+            </div>
+</div>
+
               <h3>OM KANAL S</h3>
+    <div id="omkanal"> 
                 <div>
                   <p>Kanal S er utviklet for elever og lærere på mellomtrinnet. I Kanal S vil du finne alle fag. Høsten 2013 foreligger fagene engelsk, norsk, matematikk, samfunnsfag og kunst og håndverk.
 
         Kanal S befinner seg i Nyhetstårnet i Salaby. Ved bruk av filmer, animasjoner, digitale tekstoppgaver og bilder presenteres stoffet levende og dynamisk. Innholdet er gjerne knyttet opp til aktuelle temaer, noe som gjør at det kan tas i bruk i forbindelse med årlige tradisjoner, nyhetssaker og markeringer gjennom året.
         </p>
               </div>
+</div>
+
               <h3>OM BYPARKEN</h3>
+    <div id="ombypark"> 
                 <div>
                   <p>Skoleveien er Salaby for 3.- 4.trinn og er de sidene som har eksistert lengst i Salaby.
 Sidene blir stadig oppdatert med nytt, pedagogisk materiell. 
@@ -27,7 +36,10 @@ Morsmålssider på polsk, tamil og somali og tigrinja
 Språkstøtte for tamil, tyrkisk, arabisk, polsk, urdu, somali og kurdisk og vietnamesisk
 Mange nye bøker i biblioteket </p>
               </div>
+</div>
+
               <h3>OM SKOLEVEIEN</h3>
+    <div id="omskolevei"> 
                 <div>
           <p>Skoleveien er Salaby for 1.- 3.trinn og er de sidene som har eksistert lengst i Salaby.
 Sidene blir stadig oppdatert med nytt, pedagogisk materiell. 
@@ -38,3 +50,5 @@ Språkstøtte for tamil, tyrkisk, arabisk, polsk, urdu, somali og kurdisk og vie
 Mange nye bøker i biblioteket 
 </p>
               </div>
+</div>
+</div>
