--- a/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
@@ -1,6 +1,5 @@
-<div class="jodedom-background-container">
+<div id="jodedom-background-container">
 
-    
 <div id ="wrapper">
 <section class="test">
   <div class="row" id="mainMenu">
