--- a/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/hinduisme.html.erb
@@ -22,7 +22,6 @@
 
 
 
-
   <div class="row">
     <div class="large-3 small-6 medium-4 columns">
       <div class="align-center bilde-hover">
@@ -57,7 +56,13 @@
         <img src="/assets/barn/hinduisme/tegn.png" draggable="false" alt="Film med tegnspråk">
       </div>
     </div>
-    <div class="large-3"></div>
+    <div class="large-3 small-6 medium-4 columns">
+      <div class="align-center bilde-hover">
+        <a href="/static_pages/barn/rle/helligerom_spill"><img src="/assets/barn/hinduisme/helligspill.jpg" draggable="false" alt="Det hellige rom spill"></a>
+      </div>
+    </div>
+    <div class="large-3 small-6 medium-4 columns">
+    </div>
   </div>
 
 
