--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -1,7 +1,7 @@
 <div id="religion-background-wrapper">
 
 
-<section class="test">
+<section class="test-section">
 
   <div class="row">
     <div class="large-12 columns">
