--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -1,4 +1,4 @@
-<img draggable="false" src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
+<img draggable="false" src="/assets/barn/skoleveien.jpg" class="backgroundImage" alt="bakgrunnsbilde">
 
 <div id="barnForsideWrapper">
 
