--- a/Salabytest/app/views/static_pages/index.html.erb
+++ b/Salabytest/app/views/static_pages/index.html.erb
@@ -1,4 +1,4 @@
-<img src="/assets/barn/skoleveien.jpg" id="background_image" alt="bakgrunnsbilde">
+<img src="/assets/barn/skoleveien.jpg" class="backgroundImage" alt="bakgrunnsbilde">
     
 <!--ADULT SECTION-->
 <div id="adultSection">
@@ -21,7 +21,7 @@
   </div>
   <div id="row">
     <div class="large-12 medium-12 small-12 columns">
-<%= render 'sessions/form' %>
+    <%= render 'sessions/form' %>
     </div>
   </div>
 </div>
