fjernet padding-top på body med en important, setning
og lagt til topMarg diver på headerene

--- a/Salabytest/app/assets/stylesheets/application.css
+++ b/Salabytest/app/assets/stylesheets/application.css
@@ -19,6 +19,15 @@ img{
   min-height: 100%;
 }
 
+.f-topbar-fixed{
+	padding-top: 0!important;
+}
+
+.topMarg {
+    margin-top: 65px;
+}
+
+
 /* Overflow control */
 /* body {
     overflow:scroll;
