--- a/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
+++ b/Salabytest/app/assets/stylesheets/voksen/voksen_shared.css
@@ -155,7 +155,7 @@ body {
 }
 
 @media only screen and (max-width: 73.063em) {
-    #wrapper {
+    #wrapperVoksen {
         margin-top: 3em;
     }
 }
