--- a/Salabytest/app/views/departments/new.html.erb
+++ b/Salabytest/app/views/departments/new.html.erb
@@ -1,3 +1,4 @@
+<img draggable="false" src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
 <%=render 'shared/page_header' %>
 
 <% if logged_in? && current_user.class_admin?%>
