--- a/Salabytest/app/views/users/edit.html.erb
+++ b/Salabytest/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div id="bgUser"><%= image_tag 'barn/skoleveien.jpg'%></div>
+<img draggable="false" src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
 <div id="UserWrapper">
     <div class="row">
         <div class="large-12 columns">
