--- a/Salabytest/app/views/static_pages/barn/engelsk.html.erb
+++ b/Salabytest/app/views/static_pages/barn/engelsk.html.erb
@@ -5,7 +5,7 @@
 
   <div class="row">
     <div class="large-12 columns">
-      <h1 class="fagh">RLE</h1>
+      <h1 class="fagh">ENGELSK</h1>
     </div>
   </div>
 
@@ -20,36 +20,36 @@
 
 
   <div class="test">
+
     <div class="row">
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="rle/hinduisme.html"><img src="/assets/barn/RLE/hinduisme.png" draggable="false" alt="Hinduismebilde">
-          </a>
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"/></a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"> </a>
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"></a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/kristendom.png" draggable="false" alt="Kristendombilde">
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"></a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="/static_pages/barn/rle/jodedom"><img src="/assets/barn/rle/jøde.png" draggable="false" alt="Jødedommenbilde"></a>
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"></a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/budd.png" draggable="false" alt="Buddhismebilde">
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"></a>
         </div>
       </div>
 
@@ -61,19 +61,19 @@
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/etikk.png" draggable="false" alt="Etikkbilde">
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"></a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/kirke.png" draggable="false" alt="Kirkebilde">
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"></a>
         </div>
       </div>
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/kunst2.png" draggable="false" alt="Kunstbilde">
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"></a>
         </div>
       </div>
       <div class="large-3"></div>
