lagt til breadcrumbs i islam og jødedom siden

--- a/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle/jodedom.html.erb
@@ -1,22 +1,21 @@
 <div id="jodedom-background-container">
 
-<div id ="wrapper">
-<section class="test">
-  <div class="row" id="mainMenu">
-    <div class="large-3 medium-6 small-6 columns">
-      <img src="/assets/barn/RLE/logo_liten.png" draggable="false" alt="logo">
-    </div>
-
-    <div class="large-3 medium-6 small-6 columns">
-      <a href="/static_pages/barn/rle"><img id="backArrow" src="/assets/barn/arrowback.png" draggable="false" alt="Pil tilbake"></a>
-    </div>
-  </div>
-
   <div class="row">
     <div class="large-12 columns">
       <h1 class="fagh">JØDEDOMMEN</h1>
     </div>
   </div>
+
+   <div class="row">
+    <ul class="breadcrumbs">
+        <li><a href="/static_pages/barn/forside.html">Hjem</a></li>
+        <li class="unavailable"><a href="#">Kanal S</a></li>
+        <li><a href="/static_pages/barn/rle">RLE</a></li>
+        <li class="current"><a href="/static_pages/barn/rle">Jødedommen</a></li>
+
+    </ul>
+  </div>
+
 
   <div class="test">
 
